# fedramp-readiness-toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  control_update.md  feature_request.md
.github/workflows/: docs.yml  lint-and-format.yml  release.yml  run-tests.yml  validate-oscal.yml
baselines/: README.md
checklists/: 3pao-selection-guide.md  conmon-monthly-checklist.md  fips199-categorization.md  low-baseline-checklist.md  moderate-baseline-checklist.md  pre-engagement-checklist.md
config/: cloud-api-config.yaml.example  evidence-requirements.yaml  fedramp-controls-mapping.yaml  sla-thresholds.yaml
docs/: architecture.md  fedramp-overview.md  getting-started.md  index.md  oscal-guide.md
docs/adr/: 0001-oscal-first-design.md
docs/checklists/: boundary-definition.md  federal-mandates-checklist.md  fedramp-20x-readiness.md  high-baseline-checklist.md
docs/guides/: continuous-monitoring.md  evidence-collection.md  gap-analysis.md  ssp-development.md
examples/: sample-implementation-status.csv  sample-implementation-status.yaml  sample-inheritance-overrides.yaml  sample-system-metadata.yaml
examples/sample-evidence/: README.md
examples/sample-gap-report/: README.md
examples/sample-ssp/: README.md
scripts/: __init__.py  catalog_parser.py  compliance_scorer.py  evidence_collector.py  gap_analysis.py  inheritance_mapper.py  inventory_drift.py  oscal_validator.py  poam_manager.py  scan_aggregator.py  ssp_generator.py
scripts/utils/: __init__.py  cloud_providers.py  oscal_helpers.py  report_generators.py
templates/policies/: access-control-policy.md  configuration-management-plan.md  contingency-plan.md  incident-response-plan.md
tests/fixtures/: .gitkeep.json  sample-documented-inventory.yaml  sample-live-inventory.json  sample-nessus.csv  sample-trivy.json
tests/fixtures/sample-controls/: AC.md  SC.md
tests/integration/: test_pipeline.py
tests/unit/: test_catalog_parser.py  test_gap_analysis.py  test_inheritance_mapper.py  test_phase3_scripts.py
