[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fedramp-readiness-toolkit"
version = "0.1.0"
description = "FedRAMP Readiness Assessment Toolkit for Cloud Service Providers"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Your Organization", email = "security@WilliamAsare.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # OSCAL SDK - the backbone of all OSCAL operations
    "compliance-trestle>=2.6.0",
    "compliance-trestle-fedramp>=0.3.0",

    # Data validation (Trestle foundation)
    "pydantic>=2.0",

    # XML/YAML parsing
    "lxml>=4.9",
    "pyyaml>=6.0",

    # Document generation
    "openpyxl>=3.1",       # Excel read/write (POA&M, IIW, reports)
    "python-docx>=0.8",    # Word document generation
    "jinja2>=3.1",         # Template rendering

    # Data analysis and reporting
    "pandas>=2.0",

    # HTTP and CLI
    "requests>=2.31",
    "rich>=13.0",          # Pretty CLI output
    "click>=8.1",          # CLI framework
]

[project.optional-dependencies]
aws = [
    "boto3>=1.28",
]
azure = [
    "azure-mgmt-policyinsights>=1.1",
    "azure-mgmt-security>=5.0",
    "azure-identity>=1.14",
]
gcp = [
    "google-cloud-asset>=3.20",
    "google-cloud-securitycenter>=1.23",
]
all-clouds = [
    "fedramp-readiness-toolkit[aws,azure,gcp]",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "ruff>=0.1.0",
    "black>=23.7",
    "mypy>=1.5",
    "pre-commit>=3.3",
]

[project.scripts]
fedramp-toolkit = "scripts.cli:main"

[tool.setuptools.packages.find]
include = ["scripts*", "config*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may require network/APIs)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # relax for initial development
